z-index fix
git-svn-id: https://svn.participatoryculture.org/svn/dtv/trunk@6944 bce20531-a64c-4166-8316-56baf4a01729

Original sha1: 9aaaed0ee9c9583f2f85a80afd9768e1df86f68c

--- a/tv/resources/css/layout.css
+++ b/tv/resources/css/layout.css
@@ -639,7 +639,7 @@ an element is dragged, the drag-highlight class is added to it */
   width:154px;
   text-align:center;
   position:absolute;
-  z-index:20;
+  z-index:2;
 }
 .tnail.playable #tnail-buttons,
 table.item:hover #tnail-buttons {
@@ -705,13 +705,14 @@ a.play img {
     height:auto;
 }
 .main-video-desc h1 {
+  white-space:nowrap;
   height:19px;
 }
-.hide-channel-title .main-video-desc h1 {
+/*.hide-channel-title .main-video-desc h1 {
     margin: 0px;
     padding-bottom: 5px;
     overflow: hidden;
-}
+}*/
 
 .main-video-desc-desc {
     cursor:pointer;
@@ -741,17 +742,6 @@ a.play img {
     margin-top: 5px;
     display: block;
 }
-
-.channel-title {
-    height: 1.3em;
-    overflow: hidden;
-    margin-right: 5px;
-}
-
-.hide-channel-title .channel-title {
-    display: none;
-}
-
 .main-video-desc p {
     display: inline;
     padding: 0px;
